Changelog
=========

0.7 (unreleased)
----------------

- Nothing changed yet.


0.6 (2021-08-11)
----------------

- #3925589: Fix expunge script.
  [JL 2021-08-11]


0.5 (2021-06-24)
----------------

- Added compatibility with Plone 5.2, Python 3.5-3.8

- Adjust garbage can view template so that it doesn't break when an object doesn't
  have the title, description, or portal_type attributes.

- Remove acquisition context before adding restored item to container.

- #2602355: Add separate audit log entry for each item that is restored or
  expunged. Log correct action for expunge script.
  [2019-02-20]

- Fix test
  [2019-06-21]

- #2926649: Fix garbage can view when folder contents contains a title with
  non-ascii characters.
  [JL 2019-09-11]

- #2960530: Use an annotation on the site to indicate if the package is
  installed
  [JL 2019-10-01]

- #3606514: Fix typo
  [JL 2020-11-20]