@@ -4,7 +4,9 @@ Changelog
 0.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- #4366655: Fire events when an item is sent to the garbage can and when it
+  is restored
+  [frapell]
 
 
 0.6 (2021-08-11)
